fix: overflow

--- a/src/css/steps.css
+++ b/src/css/steps.css
@@ -49,7 +49,7 @@
 }
 
 .step-content .codeBlockLines_node_modules-\@docusaurus-theme-classic-lib-theme-CodeBlock-Content-styles-module {
-  overflow-x: scroll !important;
+  overflow-x: auto !important;
   max-width: 20rem !important;
 }
 
